src/objects/CAREProgram__c.object
<CustomObject>
    <description>The object to handle all of the CARE Programs and their codes</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concentration__c</fullName>
        <label>Concentration</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>Type of degree</description>
        <label>Degree</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this CAREProgram__c record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramLabel__c</fullName>
        <description>This is the field that is used for EC Assignment</description>
        <label>Program Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CARE Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProgramLabel__c</columns>
        <columns>Degree__c</columns>
        <columns>Major__c</columns>
        <columns>Concentration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CARE Program Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>